--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ plugins {
 android {
     compileSdk 32
 
+    buildFeatures {
+        dataBinding = true
+    }
+
     defaultConfig {
         applicationId "com.neppplus.apipractice_okhttp_20220303"
         minSdk 21
